# halld_recon

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  SConstruct  jana-upgrade.py  port_jfactory.py
src/cmake/: FindEVIO.cmake  FindXercesC.cmake
src/libraries/: CMakeLists.txt  SConscript
src/libraries/ANALYSIS/: ANALYSIS_init.cc  DAnalysisAction.cc  DAnalysisResults_factory.cc  DAnalysisResults_factory.h  DAnalysisUtilities.cc  DAnalysisUtilities.h  DAnalysisUtilities_factory.h  DCutActions.cc  DCutActions.h  DDetectorMatches_factory_Combo.cc  DDetectorMatches_factory_Combo.h  DEventWriterROOT.cc  DEventWriterROOT.h  DEventWriterROOT_factory.h  DHistogramActions_Independent.cc  DHistogramActions_Independent.h  DHistogramActions_Reaction.cc  DHistogramActions_Reaction.h  DHistogramActions_Thrown.cc  DHistogramActions_Thrown.h  DKinFitUtils_GlueX.cc  DKinFitUtils_GlueX.h  DMCThrownMatching_factory.cc  DMCThrownMatching_factory.h  DNeutralParticle_factory_Combo.cc  DNeutralParticle_factory_Combo.h  DParticleComboCreator.cc  DReaction.cc  DReaction.h  DReactionVertexInfo_factory.cc  DReactionVertexInfo_factory.h  DReaction_factory_Thrown.cc  DReaction_factory_Thrown.h  DSourceComboP4Handler.cc  DSourceComboTimeHandler.cc  DSourceComboVertexer.cc  DSourceComboer.cc  DSourceComboer.h
src/libraries/BCAL/: BCAL_init.cc  DBCALClump_factory.cc  DBCALCluster.h  DBCALCluster_factory.cc  DBCALCluster_factory.h  DBCALCluster_factory_SINGLE.cc  DBCALCluster_factory_SINGLE.h  DBCALGeometry.cc  DBCALGeometry.h  DBCALGeometry_factory.h  DBCALHit_factory.cc  DBCALHit_factory.h  DBCALShower.h  DBCALShower_factory.h  DBCALShower_factory_CURVATURE.h  DBCALShower_factory_IU.cc  DBCALShower_factory_JLAB.cc  DBCALShower_factory_JLAB.h  DBCALShower_factory_KLOE.cc  DBCALTDCHit_factory.cc  DBCALTDCHit_factory.h  DBCALUnifiedHit_factory.cc  DBCALUnifiedHit_factory.h
src/libraries/CCAL/: CCAL_init.cc  DCCALHit.h  DCCALHit_factory.cc  DCCALHit_factory.h  DCCALShower.cc  DCCALShower.h  DCCALShower_factory.cc  DCCALShower_factory.h  DCCALShower_factory_island.cc  DCCALTruthShower.h  DCCALTruthShower_factory.cc  DCCALTruthShower_factory.h  ccal.h
src/libraries/CDC/: CDC_init.cc  DCDCHit_factory.cc  DCDCHit_factory.h  DCDCHit_factory_Calib.cc  DCDCHit_factory_Calib.h  DCDCTrackHit_factory.cc  DCDCWire.h
src/libraries/CERE/: CERE_init.cc
src/libraries/DANA/: DApplication.cc  DApplication.h  DEvent.h  DFactoryGenerator.cc  DGeometryManager.cc  DGeometryManager.h
src/libraries/DAQ/: DAQ_init.cc  DBeamCurrent.h  DBeamCurrent_factory.cc  DBeamCurrent_factory.h  DEVIOWorkerThread.cc  DEVIOWorkerThread.h  DParsedEvent.h  Df125EmulatorAlgorithm_factory.h  Df125EmulatorAlgorithm_v2.cc  Df250EmulatorAlgorithm_factory_v1.h  Df250EmulatorAlgorithm_factory_v3.h  Df250EmulatorAlgorithm_v1.cc  Df250EmulatorAlgorithm_v1.h  Df250EmulatorAlgorithm_v3.cc  Df250EmulatorAlgorithm_v3.h  JEventSourceGenerator_EVIO.cc  JEventSourceGenerator_EVIO.h  JEventSourceGenerator_EVIOpp.cc  JEventSourceGenerator_EVIOpp.h  JEventSource_EVIO.cc  JEventSource_EVIO.cc.disabled  JEventSource_EVIO.h  JEventSource_EVIOpp.cc  JEventSource_EVIOpp.h
src/libraries/DIRC/: DDIRCGeometry.cc  DDIRCGeometry.h  DDIRCLEDRef_factory.cc  DDIRCLEDRef_factory.h  DDIRCLut.cc  DDIRCLut.h  DDIRCLutReader.cc  DDIRCLutReader.h  DDIRCPmtHit_factory.h  DIRC_init.cc
src/libraries/EVENTSTORE/: DEventSourceEventStore.cc  DEventSourceEventStore.h  DEventSourceEventStoreGenerator.cc  EVENTSTORE_init.cc
src/libraries/FCAL/: DFCALCluster.cc  DFCALCluster.h  DFCALCluster_factory.cc  DFCALCluster_factory_Island.cc  DFCALCluster_factory_Island.h  DFCALGeometry.h  DFCALGeometry_factory.cc  DFCALHit.h  DFCALHit_factory.cc  DFCALHit_factory.h  DFCALShower.h  DFCALShower_factory.cc  DFCALShower_factory.h  DFCALTruthShower.h  FCAL_init.cc
src/libraries/FDC/: DFDCCathodeCluster.h  DFDCHit.h  DFDCHit_factory.cc  DFDCHit_factory.h  DFDCIntersection.h  DFDCIntersection_factory.cc  DFDCIntersection_factory.h  DFDCPseudo.h  DFDCPseudo_factory.cc  DFDCPseudo_factory.h  DFDCPseudo_factory_WIRESONLY.h  DFDCSegment.h  FDC_init.cc
src/libraries/FMWPC/: DCPPEpEm_factory.cc  DCPPEpEm_factory.h  DCTOFHit.h  DCTOFHit_factory.cc  DCTOFPoint.h  DCTOFPoint_factory.cc  DCTOFPoint_factory.h  DFMWPCCluster.h  DFMWPCCluster_factory.cc  DFMWPCCluster_factory.h  DFMWPCHit.h  DFMWPCHit_factory.cc  DFMWPCHit_factory.h  DFMWPCMatchedTrack.h  DFMWPCMatchedTrack_factory.cc  DFMWPCMatchedTrack_factory.h  DFMWPCTruthHit.h  FMWPC_init.cc
src/libraries/HDDM/: DEventHitStatistics.h  DEventHitStatistics_factory.cc  DEventHitStatistics_factory.h  DEventSourceHDDM.cc  DEventSourceHDDM.h  DEventSourceHDDMGenerator.h  DEventSourceREST.cc  DEventSourceREST.h  DEventWriterHDDM.cc  DEventWriterHDDM.h  DEventWriterREST.cc  DEventWriterREST.h  HDDM_init.cc  hddm_r++.cpp  hddm_r.hpp  hddm_s++.cpp  hddm_s.hpp  rest.xml
src/libraries/HDGEOMETRY/: DGeometry.cc  DGeometry.h  DLorentzMapCalibDB.cc  DMagneticFieldMapFineMesh.cc  DMagneticFieldMapFineMesh.h  DMagneticFieldMapPS2DMap.cc  DMagneticFieldMapPS2DMap.h  DMaterialMap.cc  DMaterialMap.h  DRootGeom.h
src/libraries/PAIR_SPECTROMETER/: DLumi.h  DPSCHit_factory.cc  DPSCHit_factory.h  DPSCPair.h  DPSCPair_factory.h  DPSGeometry.cc  DPSGeometry.h  DPSHit_factory.cc  DPSHit_factory.h  DPSPair_factory.h  PAIR_SPECTROMETER_init.cc
src/libraries/PID/: DBeamPhoton.h  DBeamPhoton_factory.cc  DBeamPhoton_factory.h  DBeamPhoton_factory_MCGEN.cc  DBeamPhoton_factory_MCGEN.h  DBeamPhoton_factory_TRUTH.cc  DBeamPhoton_factory_TRUTH.h  DChargedTrack.h  DChargedTrackHypothesis.h  DChargedTrackHypothesis_factory.cc  DChargedTrackHypothesis_factory.h  DChargedTrack_factory.h  DChargedTrack_factory_PreSelect.cc  DChargedTrack_factory_PreSelect.h  DDetectorMatches.h  DDetectorMatches_factory.cc  DDetectorMatches_factory.h  DDetectorMatches_factory_WireBased.cc  DDetectorMatches_factory_WireBased.h  DEventRFBunch_factory.cc  DEventRFBunch_factory.h  DEventRFBunch_factory_Calibrations.cc  DEventRFBunch_factory_Calibrations.h  DKinematicData.h  (+30 more)
src/programs/: SConscript
(+290 files in other folders)
